layout cv new html

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="contact-info">
                 <h2 class="left-title">Contato</h2>
                 <ul>
-                    <li><i class="fa fa-">+55 48 98816-6845</i></li>
-                    <li><i class="fa fa-">darleyraffael@gmail.com</i></li>
-                    <li><i class="fa fa-">@darley-raffael</i></li>
+                    <li><i class="fa fa-">+55 77 911817-6747</i></li>
+                    <li><i class="fa fa-">darleyrl@mail.com</i></li>
+                    <li><i class="fa fa-">@d-rafael</i></li>
                     <li><i class="fa fa-">in darley-raffael</i></li>
                 </ul>
             </div>
