--- a/index.html
+++ b/index.html
@@ -42,10 +42,42 @@
             <section class="about gap">
                 <h2 class="right-title">Sobre mim</h2>
                 <p class="about-me-contents">
-                    Sou o dárley Raffael
+                    Sou o dárley Raffael <br>
+                    Estudandte de desenvolvimento web
                 </p>
             </section>
         </div>
+        <section class="experience gap">
+            <h2 class="right-title">Experiência</h2>
+            <div class="experience-contents">
+                <div class="exp-left">
+                    <p class="exp-company-name">Empresa 1</p>
+                    <p class="exp-company-period">2020-Present</p>
+                </div>
+                <div class="exp-reight">
+                    <p class="exp-position">Desenvolvedor Fontent</p>
+                    <p class="exp-desc">Principais atividades</p>
+                </div>
+
+                <div class="exp-left">
+                    <p class="exp-company-name">Empresa 2</p>
+                    <p class="exp-company-period">2020-Present</p>
+                </div>
+                <div class="exp-reight">
+                    <p class="exp-position">Desenvolvedor Fontent</p>
+                    <p class="exp-desc">Principais atividades</p>
+                </div>
+
+                <div class="exp-left">
+                    <p class="exp-company-name">Empresa 3</p>
+                    <p class="exp-company-period">2020-Present</p>
+                </div>
+                <div class="exp-reight">
+                    <p class="exp-position">Desenvolvedor Fontent</p>
+                    <p class="exp-desc">Principais atividades</p>
+                </div>
+            </div>
+        </section>
     </section>
    </main>
 </body>
