add formacao academica

--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
                 </div>
             </div>
         </section>
+        <section class="education gap">
+            <div class="right-title">Formação Acadêmica</div>
+            <div class="education-left">
+                <p class="education-school-name">Puc</p>
+                <p class="education-time-period">2021~2023</p>
+            </div>
+        </section>
     </section>
    </main>
 </body>
