--- a/index.html
+++ b/index.html
@@ -79,12 +79,19 @@
             </div>
         </section>
         <section class="education gap">
-            <div class="right-title">Formação Acadêmica</div>
-            <div class="education-left">
-                <p class="education-school-name">Puc</p>
-                <p class="education-time-period">2021~2023</p>
+            <div class="right-title">Formação Academica</div>
+            <div class="education-contents">
+                <div class="education-left">
+                    <p class="education-school-name">PUC Minas</p>
+                    <p class="educationp-time-period">2021~2023</p>
+                </div>
+                <div class="education-right">
+                    <p class="education-subject">Engenharia de Software</p>
+                    <p class="education-desc">
+                        Pós graduação em engenharia de software...
+                    </p>
+                </div>
             </div>
-        </section>
     </section>
    </main>
 </body>
