--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,85 +8,117 @@
     <link rel="stylesheet" href="style.css">
     <title>Dárley Raffael CV</title>
 </head>
+
 <body>
-   <main class="resume-contents">
-    <section class="left-section">
-        <section class="left-section-contents">
-            <div class="profile">
-                <img src="https://avatars.githubusercontent.com/u/99445232?v=4" alt="imagem de perfil do Raffael" class="profile-image">
-                <h2 class="name">Dárley Raffael</h2>
-                <p class="profession">Frontend Developer</p>
-            </div>
-            <div class="contact-info">
-                <h2 class="left-title">Contato</h2>
-                <ul>
-                    <li><i class="fa fa-">+55 77 911817-6747</i></li>
-                    <li><i class="fa fa-">darleyrl@mail.com</i></li>
-                    <li><i class="fa fa-">@d-rafael</i></li>
-                    <li><i class="fa fa-">in darley-raffael</i></li>
-                </ul>
-            </div>
-            <div class="skills">
-                <h2 class="left-title">Skills</h2>
-                <ul>
-                    <li><i class="fa fa-">Html5</i></li>
-                    <li><i class="fa fa-">CSS3</i></li>
-                    <li><i class="fa fa-">Java Script</i></li>
-                    <li><i class="fa fa-">Git</i></li>
-                </ul>
-            </div>
-        </section>
-        
-    </section>
-    <section class="right-section">
-        <div class="right-section-contents">
-            <section class="about gap">
-                <h2 class="right-title">Sobre mim</h2>
-                <p class="about-me-contents">
-                    Sou o dárley Raffael <br>
-                    Estudandte de desenvolvimento web
-                </p>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-contents">
+                <div class="profile">
+                    <img src="https://avatars.githubusercontent.com/u/99445232?v=4" alt="imagem de perfil do Raffael"
+                        class="profile-image">
+                    <p class="name">Dárley Raffael</p>
+                    <p class="profession">Frontend Developer</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-">+55 77 911817-6747</i></li>
+                        <li><i class="fa fa-">darleyrl@mail.com</i></li>
+                        <li><i class="fa fa-">@d-rafael</i></li>
+                        <li><i class="fa fa-">in darley-raffael</i></li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>Html5</p></li>
+                        <li><p>CSS3</p></li>
+                        <li><p>Java Script</p></li>
+                        <li><p>Git</p></li>
+                    </ul>
+                </div>
             </section>
-        </div>
-        <section class="experience gap">
-            <h2 class="right-title">Experiência</h2>
-            <div class="experience-contents">
-                <div class="exp-left">
-                    <p class="exp-company-name">Empresa 1</p>
-                    <p class="exp-company-period">2020-Present</p>
-                </div>
-                <div class="exp-reight">
-                    <p class="exp-position">Desenvolvedor Fontent</p>
-                    <p class="exp-desc">Principais atividades</p>
-                </div>
 
-                <div class="exp-left">
-                    <p class="exp-company-name">Empresa 2</p>
-                    <p class="exp-company-period">2020-Present</p>
-                </div>
-                <div class="exp-reight">
-                    <p class="exp-position">Desenvolvedor Fontent</p>
-                    <p class="exp-desc">Principais atividades</p>
-                </div>
+        </section>
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre mim</div>
+                    <p class="about-me-contents">
+                        Sou o dárley Raffael <br>
+                        Estudandte de desenvolvimento web
+                    </p>
+                </section>
+            </div>
+            <section class="experience gap">
+                <div class="right-title">Experiência</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 1</p>
+                        <p class="exp-company-period">2020-Present</p>
+                    </div>
+                    <div class="exp-reight">
+                        <p class="exp-position">Desenvolvedor Fontent</p>
+                        <p class="exp-desc">Principais atividades</p>
+                    </div>
 
-                <div class="exp-left">
-                    <p class="exp-company-name">Empresa 3</p>
-                    <p class="exp-company-period">2020-Present</p>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 2</p>
+                        <p class="exp-company-period">2020-Present</p>
+                    </div>
+                    <div class="exp-reight">
+                        <p class="exp-position">Desenvolvedor Fontent</p>
+                        <p class="exp-desc">Principais atividades</p>
+                    </div>
+
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 3</p>
+                        <p class="exp-company-period">2020-Present</p>
+                    </div>
+                    <div class="exp-reight">
+                        <p class="exp-position">Desenvolvedor Fontent</p>
+                        <p class="exp-desc">Principais atividades</p>
+                    </div>
                 </div>
-                <div class="exp-reight">
-                    <p class="exp-position">Desenvolvedor Fontent</p>
-                    <p class="exp-desc">Principais atividades</p>
+            </section>
+            <section class="education gap">
+                <div class="right-title">Formação Acadêmica</div>
+                <div class="education-contents">
+                    <p class="education-school-name">Puc</p>
+                    <p class="education-time-period">2021~2023</p>
                 </div>
-            </div>
+            </section>
+            <section class="awards gap">
+                <div class="right-title">Cursos</div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                        <p class="awards-company-name">EBAC</p>
+                        <p class="awards-time-period">Junho de 2018</p>
+                    </div>
+
+                    <div class="awards-right">
+                        <p class="awards-name">Curso de UX</p>
+                        <p class="awards-desc">
+                            Curso Feito na EBAC
+                        </p>
+                    </div>
+
+
+                    <div class="awards-left">
+                        <p class="awards-company-name">EBAC</p>
+                        <p class="awards-time-period">Julho de 2019</p>
+                    </div>
+
+                    <div class="awards-right">
+                        <p class="awards-name">Curso de Analise de dados</p>
+                        <p class="awards-desc">
+                            Curso Feito na EBAC em 2019
+                        </p>
+                    </div>
+                </div>
+            </section>
         </section>
-        <section class="education gap">
-            <div class="right-title">Formação Acadêmica</div>
-            <div class="education-left">
-                <p class="education-school-name">Puc</p>
-                <p class="education-time-period">2021~2023</p>
-            </div>
-        </section>
-    </section>
-   </main>
+    </main>
 </body>
+
 </html>
