adicionando fontes e icones

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="style.css">
     <title>Dárley Raffael CV</title>
 </head>
@@ -22,10 +29,10 @@
                 <div class="contact-info">
                     <p class="left-title">Contato</p>
                     <ul>
-                        <li><i class="fa fa-">+55 77 911817-6747</i></li>
-                        <li><i class="fa fa-">darleyrl@mail.com</i></li>
-                        <li><i class="fa fa-">@d-rafael</i></li>
-                        <li><i class="fa fa-">in darley-raffael</i></li>
+                        <li><i class="fa fa-phone">+55 77 911817-6747</i></li>
+                        <li><i class="fa fa-envelope">darleyrl@mail.com</i></li>
+                        <li><i class="fa fa-globe">@d-rafael</i></li>
+                        <li><i class="fa fa-github">in darley-raffael</i></li>
                     </ul>
                 </div>
                 <div class="skills">
